
Next version:

* new IFilter for PDF and LaTeX to support searching document contents with
  Windows Search (not included with SumatraPDF but available as a separate download(?))

* browser plugin for Mozilla Firefox, Google Chrome and Opera for displaying
  PDF documents with SumatraPDF inside the browser (does NOT work under MSIE)
* add support for AES-256 encrypted documents

1.3 (2011-02-04)

* improved text selection and copying. We now mimic the way a browser
  or Adobe Reader works: just select text with mouse and use Ctrl-C
  to copy it to a clipboard
* Shift+Left Mouse now scrolls the document, Ctrl+Left mouse still
  creates a rectangular selection (for copying images)
* 'c' shortcut toggles continuous mode
* '+' / '*' on the numeric keyboard now do zoom and rotation
* added toolbar icons for Fit Page and Fit Width and updated
  the look of toolbar icons
* add support for back/forward mouse buttons for back/forward navigation
* 1.2 introduces a new full screen mode and made it the default
  full screen mode. Old mode was still available but not easily
  discoverable. We've added View/Presentation menu item for
  new full screen mode and View/Fullscreen menu item for the old
  full screen mode, to make it more discoverable
* new, improved installer
* improved zoom performance (zooming to 6400% no longer crashes)
* text find uses less memory
* further printing improvements
* translation updates
* updated to latest mupdf for misc bugfixes and improvements
* use libjpeg-turbo library instead of libjpeg, for faster decoding
  of some PDFs
* updated openjpeg library to version 1.4 and freetype to version 2.4.4
* fixed 2 integer overflows reported by Stefan Cornelius from Secunia Research

1.2 (2010-11-26):

* improved printing: faster and uses less resources
* add Ctrl-Y as a shortcut for Custom Zoom
* add Ctrl-A as a shortcut for Select All Text
* improved full screen mode
* open embedded PDF documents
* allow saving PDF document attachements to disk