@@ -28,6 +28,7 @@ enum WinState {
 enum MouseAction {
     MA_IDLE = 0,
     MA_DRAGGING,
+    MA_DRAGGING_RIGHT,
     MA_SELECTING,
     MA_SCROLLING,
     MA_SELECTING_TEXT
