@@ -9,6 +9,8 @@ Next version:
 * browser plugin for Mozilla Firefox, Google Chrome and Opera for displaying
   PDF documents with SumatraPDF inside the browser (does NOT work under MSIE)
 * add support for AES-256 encrypted documents
+* Right Mouse now drags the document (same as Shift+Left),
+  Right+Scroll zooms it (same as Ctrl+Scroll)
 
 1.3 (2011-02-04)
 
